# leaffliction

./: .gitignore  Distribution.py  Model.py  Train.py  conda-env.yaml  dataset.py  leafflication.ipynb  mk_sig.sh  mk_small_dataset.sh  predict.py  pyproject.toml  readme.md  requirements.txt  setup.sh  signature.txt  todo.md  train.py  train_cnn.ipynb  train_cnn.py
Part_1/: Distribution.py
Part_2/: Augmentation.py
leaffliction/: constants.py  dataset.py  models.py  training.py  utils.py
leaffliction/Part_2/: Augmentation.py
notebooks/: experimental_reg.ipynb
part_3/: Transformation.py
part_4/: predict.py  train.py
src/: data_loaders.py  trainer.py
